--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="history"><u>VISIT HISTORY</u></string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_doctor_nav">DoctorNavActivity</string>
 </resources>
